--- a/translations/kangyur/translations/089-002_toh545,892-spoken_by_manjusri_himself.xml
+++ b/translations/kangyur/translations/089-002_toh545,892-spoken_by_manjusri_himself.xml
@@ -26,7 +26,7 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2023</date>
+                <edition>v 1.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1">
@@ -72,7 +72,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-04-17T08:02:21.404Z" user="admin">17/04/2023 08:02:21</note>
+                                <note type="lastUpdated" date-time="2023-04-26T23:15:34.353Z" user="admin">26/04/2023 23:15:34</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:16:19.114Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:16:19.114Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:16:58.484Z" user="line-tofte">Auto
@@ -127,6 +127,7 @@
                             <note type="updated" update="text-version" value="1.0.2" date-time="2023-04-14T11:59:37.755Z" user="laura">Some suggestions from TCTGNY and cleaned up markup/copy</note>
                             <note type="updated" update="translation-status" value="1" date-time="2023-04-17T08:02:17.066Z" user="sameer">1</note>
                             <note type="updated" update="text-version" value="1.0.3" date-time="2023-04-17T08:02:17.066Z" user="sameer">Included in App v 3.1</note>
+                            <note type="updated" update="text-version" value="1.0.4" date-time="2023-04-26T23:15:31.526Z" user="martina-cotter">updated summary and note 15.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -139,10 +140,7 @@
                                 <head type="summary" tid="1">Summary</head>
                                 <milestone unit="chunk" xml:id="UT22084-089-002-1"/>
                                 <p tid="2">
-                    <title xml:lang="en">Spoken by Mañjuśrī Himself</title> provides an incantatory practice taught by
-                                        Mañjuśrī. The dhāraṇī first extols Mañjuśrī as a tathāgata, an arhat, and a perfectly awakened buddha, and
-                                        proceeds with an invocation of an unnamed and otherwise unidentified female deity who is praised as an
-                                        illuminator and protector, both of the teachings and of the various classes of sentient beings. </p>
+                    <title xml:lang="en">Spoken by Mañjuśrī Himself</title> provides an incantatory practice taught by Mañjuśrī. The dhāraṇī has two sections: the first extols Mañjuśrī as a tathāgata, an arhat, and a perfectly awakened buddha, and the second invokes a <foreign xml:lang="Sa-Ltn">bhagavatī</foreign> who is praised as an illuminator and supplicated for protection. </p>
                         </div>
                         <div type="acknowledgment">
                                 <head type="acknowledgment" tid="3">Acknowledgements</head>
@@ -167,9 +165,7 @@
                                                 scriptures (Toh 547 omitted) also appear in the Dhāraṇī section of the Degé Kangyur as Toh
                                                 892–896.</p>
                                         <milestone unit="chunk" xml:id="UT22084-089-002-7"/>
-                                        <p tid="10">The dhāraṇī proper is addressed to an unnamed and otherwise unidentified female deity, called only
-                                                “Blessed Lady” (<foreign xml:lang="Sa-Ltn">bhagavatī</foreign>), who is extolled as an illuminator and
-                                                protector, both of the teachings and of the various classes of sentient beings. The scripture then
+                                        <p tid="10">The dhāraṇī proper has two sections: the first extols Mañjuśrī as a tathāgata, an arhat, and a perfectly awakened buddha, and the second invokes a <foreign xml:lang="Sa-Ltn">bhagavatī</foreign> who is praised as an illuminator and supplicated for protection. The scripture then
                                                 details the extraordinary benefits accrued by even a single recitation of the dhāraṇī—the eradication
                                                 of karmic obscurations collected over a thousand eons and, at death, the sight of Mañjuśrī and
                                                 Avalokiteśvara. Although the title indicates that the dhāraṇī was spoken by Mañjuśrī, the text does
@@ -234,13 +230,13 @@
                         </note>
                                                 vaśe sthāpaya<note place="end" xml:id="UT22084-089-002-29"> The Degé Kangyur in both versions (Toh 545
                                                         and 892) reads <foreign xml:lang="Sa-Ltn" type="quote">stapāya</foreign>.</note> abhayaṃ<note place="end" xml:id="UT22084-089-002-30"> The Degé Kangyur in both versions (Toh 545 and 892)
-                                                        reads <foreign xml:lang="Sa-Ltn" type="quote">apayaṃ</foreign>.</note> dadati svāhā ||<note place="end" xml:id="UT22084-089-002-31"> “It is: <foreign xml:lang="Sa-Ltn">Oṁ</foreign>,
+                                                                reads <foreign xml:lang="Sa-Ltn" type="quote">apayaṃ</foreign>.</note> dadati svāhā ||<note place="end" xml:id="UT22084-089-002-31"> “It is: <foreign xml:lang="Sa-Ltn">Tad yathā oṁ</foreign>,
                                                         light of wisdom sustaining the lineage of the Three Jewels, Blessed Lady, grant freedom from
                                                         fear! You who grant freedom from fear, protect the vajra of my mind of awakening! Vanquish,
                                                         vanquish with your all-encompassing light the evil in the continuum of each being and sever
                                                         the afflictions! You whose body bears the best of marks, protect the disciples of
-                                                        bodhisattvas, alert the buddhas, and establish the devas, nāgas, yakṣas, gandharvas, asuras,
-                                                        garuḍas, kinnaras, and mahoragas in thralldom while you remove their fear, <foreign xml:lang="Sa-Ltn">svāhā</foreign>!”</note>
+                                                        bodhisattvas, advise the buddhas, and bring the devas, nāgas, yakṣas, gandharvas, asuras,
+                                                        garuḍas, kinnaras, and mahoragas under control while you remove their fear, <foreign xml:lang="Sa-Ltn">svāhā</foreign>!”</note>
                     </p>
                                         <milestone unit="chunk" xml:id="UT22084-089-002-32"/>
                                         <p tid="24">As for the benefits of this dhāraṇī, even a single recitation will purify the karmic obscurations
