--- a/translations/kangyur/translations/046-001_toh95_play_in_full.xml
+++ b/translations/kangyur/translations/046-001_toh95_play_in_full.xml
@@ -31,7 +31,7 @@
                     daughter, and son</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 4.48.11 <date>2023</date>
+                <edition>v 4.48.12 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -67,7 +67,7 @@
 
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-19T12:28:46.4Z" user="admin">19/04/2023 12:28:46</note>
+                <note type="lastUpdated" date-time="2023-04-26T23:29:32.191Z" user="admin">26/04/2023 23:29:32</note>
                 <note type="updated" update="text-version" value="v 4.41" date-time="2019-06-18T02:38:10.693Z" user="celso">v 4.41 2019</note>
                 <note type="updated" update="text-version" value="v 4.42" date-time="2019-06-18T15:38:54.459Z" user="celso">v 4.42 2019</note>
                 <note type="updated" update="text-version" value="v 4.43" date-time="2019-06-21T14:20:46.243Z" user="celso">v 4.43 2019</note>
@@ -105,6 +105,7 @@
                 <note type="updated" update="text-version" value="4.48.10" date-time="2023-03-10T16:13:19.518Z" user="andre">Republished to remove previous version of the new glossary by Sameer that went to
                     distribution unintentionally in January 2023.</note>
                 <note type="updated" update="text-version" value="4.48.11" date-time="2023-04-19T12:28:43.153Z" user="celso">Corrected @type values for Skt. attestation to match the new code in the schema.</note>
+                <note type="updated" update="text-version" value="4.48.12" date-time="2023-04-26T23:29:28.936Z" user="martina-cotter">Updated typo.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -11291,7 +11292,7 @@
                         without also giving them a bowl.”</p>
                     <milestone unit="chunk" xml:id="UT22084-046-001-1310"/>
                     <p tid="1669">So the Bodhisattva took the bowl and left Urubilvā. Before noon he arrived at the
-                        banks of the Nairañjanā River, the river of nāgas. He put down his bowl and rope and entered the
+                        banks of the Nairañjanā River, the river of nāgas. He put down his bowl and robe and entered the
                         water to refresh himself. Monks, while the Bodhisattva was bathing, several hundred thousand
                         gods came to venerate him. They poured divine aloe and sandalwood powder as well as various
                         ointments into the river, and they scattered divine flowers of all colors onto the water. In
