--- a/translations/kangyur/placeholders/089-012_toh555-the_sutra_the_supremely_victorious_golden_light.xml
+++ b/translations/kangyur/placeholders/089-012_toh555-the_sutra_the_supremely_victorious_golden_light.xml
@@ -23,11 +23,11 @@
                 <sponsor ref="sponsors.xml#sponsor-181">Zhang Dada</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2019</date>
+                <edition>v 0.0.12 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.c">
                 <idno xml:id="UT22084-089-012"/>
                 <date/>
             </publicationStmt>
@@ -43,7 +43,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-21T10:37:39.865Z" user="admin">21/02/2023 10:37:39</note>
+                <note type="lastUpdated" date-time="2023-04-28T10:12:26.643Z" user="admin">28/04/2023 10:12:26</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-06T13:46:43.307Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-07T13:58:34.151Z" user="line-tofte">Auto (update-contributors)</note>
@@ -60,6 +60,8 @@
                 <note type="updated" update="text-version" value="0.0.10" date-time="2023-01-03T09:59:24.417Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2023-02-21T10:37:34.052Z" user="line-tofte">2.d</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2023-02-21T10:37:34.052Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.c" date-time="2023-04-28T10:12:22.377Z" user="line-tofte">2.c</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2023-04-28T10:12:22.377Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
