--- a/translations/kangyur/placeholders/090-005_toh561-the_great_amulet_queen_of_incantations.xml
+++ b/translations/kangyur/placeholders/090-005_toh561-the_great_amulet_queen_of_incantations.xml
@@ -22,11 +22,11 @@
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2019</date>
+                <edition>v 0.0.10 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-090-005"/>
                 <date/>
             </publicationStmt>
@@ -42,7 +42,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-12T13:49:54.128Z" user="admin">12/04/2023 13:49:54</note>
+                <note type="lastUpdated" date-time="2023-05-02T08:51:14.418Z" user="admin">02/05/2023 08:51:14</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:23:41.721Z" user="mike">2.d</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-08T10:24:15.249Z" user="line-tofte">Auto (update-contributors)</note>
@@ -53,6 +53,8 @@
                 <note type="updated" update="text-version" value="0.0.8" date-time="2022-08-24T09:25:18.389Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2023-04-12T13:49:49.813Z" user="line-tofte">2.b</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2023-04-12T13:49:49.813Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-05-02T08:51:10.163Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2023-05-02T08:51:10.163Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
