--- a/translations/kangyur/placeholders/101-151_toh1095,4377-the_prayer_of_good_action.xml
+++ b/translations/kangyur/placeholders/101-151_toh1095,4377-the_prayer_of_good_action.xml
@@ -21,10 +21,10 @@
                 <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2023</date>
+                <edition>v 0.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-101-151"/>
                 <date/>
             </publicationStmt>
@@ -50,7 +50,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-21T09:59:42.881Z" user="admin">21/04/2023 09:59:42</note>
+                <note type="lastUpdated" date-time="2023-05-02T10:01:29.259Z" user="admin">02/05/2023 10:01:29</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T12:58:05.65Z" user="mike">2.h</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2023-02-22T15:23:55.921Z" user="line-tofte">2.f</note>
@@ -64,6 +64,8 @@
                 <note type="updated" update="text-version" value="0.0.6" date-time="2023-04-04T08:47:16.188Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2023-04-21T09:59:38.567Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-04-21T09:59:38.567Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-05-02T10:01:24.979Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-05-02T10:01:24.979Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
