--- a/translations/kangyur/translations/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
+++ b/translations/kangyur/translations/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
@@ -34,7 +34,7 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -84,7 +84,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-05-01T08:09:45.051Z" user="admin">01/05/2023 08:09:45</note>
+                                <note type="lastUpdated" date-time="2023-05-02T14:12:59.372Z" user="admin">02/05/2023 14:12:59</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-06-08T09:30:26.839Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-06-08T09:30:26.839Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-08T09:38:10.747Z" user="line-tofte">Auto
@@ -133,6 +133,7 @@
                             <note type="updated" update="text-version" value="0.0.3" date-time="2023-04-26T13:22:30.316Z" user="line-tofte">Auto (update-contributors)</note>
                             <note type="updated" update="translation-status" value="1.a" date-time="2023-05-01T08:09:40.802Z" user="martina-cotter">1.a</note>
                             <note type="updated" update="text-version" value="1.0.0" date-time="2023-05-01T08:09:40.802Z" user="martina-cotter">1.0.0</note>
+                            <note type="updated" update="text-version" value="1.0.1" date-time="2023-05-02T14:12:56.475Z" user="martina-cotter">Updated note 9.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -284,8 +285,7 @@
                                                 on imperial command by Dānapāla (Shihu <foreign xml:lang="zh">施護</foreign>, ?–1017 <hi rend="small-caps">ce</hi>), an Indian scholar-monk
                                                 from Uḍḍiyāna who translated over one hundred works
                                                 into Chinese.<note place="end" xml:id="UT22084-034-007-16"> Muller, <title xml:lang="en">Digital Dictionary of
-                                                  Buddhism</title>, s.v. “<ref target="http://buddhism-dict.net/cgi-bin/xpr-ddb.pl?q=%E6%96%BD%E8%AD%B7">Dānapāla</ref>
-                                                  <foreign xml:lang="zh" type="term">施護</foreign>.”</note> Just like the Sanskrit
+                                                        Buddhism</title>, s.v. “Dānapāla <foreign xml:lang="zh" type="term">施護</foreign>.”</note> Just like the Sanskrit
                                                 text, the Chinese translation has a slightly
                                                 different textual structure and content than the
                                                 Tibetan, and in the endnotes we have noted major
