--- a/translations/kangyur/placeholders/034-015_toh27-the_perfection_of_wisdom_for_candragarbha.xml
+++ b/translations/kangyur/placeholders/034-015_toh27-the_perfection_of_wisdom_for_candragarbha.xml
@@ -19,7 +19,7 @@
                 <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2022</date>
+                <edition>v 0.0.11 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.c">
@@ -38,7 +38,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-02T15:02:29.354Z" user="admin">02/05/2023 15:02:29</note>
+                <note type="lastUpdated" date-time="2023-05-02T15:03:35.346Z" user="admin">02/05/2023 15:03:35</note>
                 <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:46:51.272Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:46:51.272Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-05-18T12:04:58.366Z" user="line-tofte">3</note>
@@ -59,6 +59,7 @@
                 <note type="updated" update="text-version" value="0.0.11" date-time="2023-04-17T08:48:19.277Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2023-05-02T15:02:24.979Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.12" date-time="2023-05-02T15:02:24.979Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2023-05-02T15:03:32.45Z" user="line-tofte">0.0.11</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
