--- a/translations/kangyur/translations/101-146_toh1090,1777-in_praise_of_the_mistress_of_disease.xml
+++ b/translations/kangyur/translations/101-146_toh1090,1777-in_praise_of_the_mistress_of_disease.xml
@@ -24,7 +24,7 @@
         <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -70,7 +70,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-04-18T11:29:31.783Z" user="admin">18/04/2023 11:29:31</note>
+        <note type="lastUpdated" date-time="2023-05-04T15:56:54.984Z" user="admin">04/05/2023 15:56:54</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2022-04-12T07:53:43.707Z" user="line-tofte">2.h</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-12T07:53:43.707Z" user="line-tofte">Auto (update-publication-status)</note>
         <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-12T08:01:52.252Z" user="line-tofte">Auto (update-contributors)</note>
@@ -99,6 +99,7 @@
         <note type="updated" update="translation-status" value="1.a" date-time="2023-04-07T15:08:54.3Z" user="martina-cotter">1.a</note>
         <note type="updated" update="text-version" value="1.0.0" date-time="2023-04-07T15:08:54.3Z" user="martina-cotter">First published version</note>
           <note type="updated" update="text-version" value="1.0.1" date-time="2023-04-18T11:29:28.944Z" user="celso">Adjusted location span in Toh 1777 to correct alignment with eTengyur after an error in the latters page count was corrected</note>
+          <note type="updated" update="text-version" value="1.0.2" date-time="2023-05-04T15:56:52.131Z" user="andre">Glossary matching revised - activated in CG</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -399,7 +400,7 @@
             Tokyo, 2009. </bibl>
         </div>
       </div>
-      <div type="glossary" status="excluded">
+      <div type="glossary">
         <list type="glossary">
           <item>
                         <gloss type="term" xml:id="UT22084-101-146-121">
